syntax = "proto3";

option go_package = "github.com/buemura/event-driven-commerce/packages/pb";

message OrderResponse {
    string id = 1;
    string customer_id = 2;
    repeated int32 product_id_list = 3;
    int64 total_price = 4;
    string status = 5;
    string created_at = 6;
    string updated_at = 7;
}

message GetManyOrdersRequest {
    int32 page = 1;
    int32 items = 2;
}

message GetManyOrdersResponse {
    message PaginationMeta {
        int32 page = 1;
        int32 items = 2;
        int32 total_pages = 3;
        int32 total_items = 4;
    }

    repeated OrderResponse order_list = 1;
    PaginationMeta meta = 2;    
}

message GetOrderRequest {
    int32 id = 1;
}

service OrderService {
    rpc GetManyProducts(GetManyOrdersRequest) returns (GetManyOrdersResponse);
    rpc GetProduct(GetOrderRequest) returns (OrderResponse);
}